apps/ingress/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: snapvibe-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
   - http:
      paths:
        - path: /argocd
          backend:
            serviceName: argocd-server
            servicePort: 80
